--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 
+  <base href="https://hasibulkabiremon.github.io/htmlenhanceeditorweb/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -33,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3824202161';
+    var serviceWorkerVersion = '1529640056';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
